k8s-platform-engineering/applications/nginx-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: beginner-nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      nodeSelector:
        workload: user
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
