k8s-platform-engineering/applications/nginx-app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: beginner-nginx
spec:
  parentRefs:
    - name: public-gateway
      namespace: platform-gateway
  # REPLACE WITH YOUR IP: e.g., 20.55.123.45.nip.io
  hostnames:
    - "20.85.167.50.nip.io"
  rules:
    - backendRefs:
        - name: nginx
          port: 80
